# config

./: .bashrc  .gitignore  .mybashrc  .tmux.conf  .vimrc  Xresources  dotXresources  dotgitconfig  dotlogin  dotmuttrc  dotmybashrc  dotpagerrc  dotvimrc  dotxinitrc  dotzshrc  gitconfig  global_link.sh  init.sh  install-arch.sh  install.sh  link.sh  local_link.sh  muttrc  tmux.conf  update-subtree.sh  vimrc  xinitrc  zlock  zshrc
.i3/: config
config/i3status/: config
dotconfig/i3status/: config  i3status
doti3/: amute.sh  aunmute.sh  config  doti3  masterlower.sh  masterraise.sh  measure-net-speed-i3status.bash  measure-net-speed.bash  time-to-color.py  touchpadoff.sh  touchpadon.sh  wrapper-i3status.bash  zlock.sh
dotproject_gen/: configure.ac  dotproject_gen  gen.sh
dotproject_gen/template/: Makefile.am  configure.ac
dotproject_gen/template/src/module/: Makefile.am
dotvim/: .netrwhist  dotvim
dotvim/bundle/vim-config/plugin/: bindings.vim  coding_style.vim  color.vim  command.vim  functions.vim  indent.vim  settings.vim
dotvim/ftdetect/: iptables_log.vim
dotvim/syntax/: iptables_log.vim
dotzsh/: aliases.sh  aliases.zsh  bindings.sh  bindings.zsh  command.zsh  environment.sh  environment.zsh  history.sh  history.zsh  prompt.sh  prompt.zsh  title.zsh
dotzsh/oh-my-zsh/themes/: qwazerty.zsh-theme
i3/: bindsym.sh  config  i3status.conf  keymap.sh  masterlower.sh  time-to-color.py  touchpad.sh  wrapper-i3status.bash  zlock.sh
irssi/: config
irssi/scripts/autorun/: trackbar-soliton.pl
project_gen/: README
project_gen/template/: .gitignore  AUTHORS  README  configure.ac
project_gen/template/doc/: Doxyfile
usr/school/etc/: zlock.conf
vim/bundle/vim-config/plugin/: bindings.vim  coding_style.vim  color.vim  config.vim  functions.vim  indent.vim  settings.vim
zsh/: aliases.zsh  command.zsh  completion.zsh  disk-bw  environment.zsh  net-bw  prompt.zsh  title.zsh
